Add pipeline CLI tool and debug guide
Introduces a standalone CLI for the pipeline package (src/cli.ts), new npm scripts for CLI usage, and a comprehensive CLI-DEBUG-GUIDE.md for debugging workflows. Updates README.md with CLI instructions, extends tsconfig.json to include the CLI entry, and adds a shell script for clearing pipeline data. Also adds and updates scraper and pipeline package scripts for more granular scraping commands.

--- a/packages/pipeline/package.json
+++ b/packages/pipeline/package.json
@@ -10,7 +10,9 @@
     "typecheck:tests": "tsc --noEmit --skipLibCheck",
     "test": "jest",
     "test:ci": "npm run typecheck && npm run test",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cli": "npm run build && electron dist/cli.js",
+    "start": "npm run cli"
   },
   "dependencies": {
     "@cash-mgmt/shared": "*"
