--- a/packages/scrapers/package.json
+++ b/packages/scrapers/package.json
@@ -5,6 +5,21 @@
   "type": "module",
   "main": "./src/runners/cli-runner.js",
   "scripts": {
+    "scrape": "node src/runners/cli-runner.js --all",
+    "scrape:all": "node src/runners/cli-runner.js --all",
+    "scrape:visible": "node src/runners/cli-runner.js --all --no-headless",
+    "scrape:flagstone": "node src/runners/cli-runner.js --platform flagstone",
+    "scrape:hl": "node src/runners/cli-runner.js --platform hl",
+    "scrape:ajbell": "node src/runners/cli-runner.js --platform ajbell",
+    "scrape:moneyfacts": "node src/runners/cli-runner.js --platform moneyfacts",
+    "scrape:moneyfacts:fixed-term": "node src/runners/cli-runner.js --platform moneyfacts --type fixed-term",
+    "scrape:moneyfacts:notice": "node src/runners/cli-runner.js --platform moneyfacts --type notice",
+    "scrape:moneyfacts:easy-access": "node src/runners/cli-runner.js --platform moneyfacts --type easy-access",
+    "scrape:moneyfacts:no-fixed": "node src/runners/cli-runner.js --platform moneyfacts --exclude fixed-term",
+    "scrape:flagstone:visible": "node src/runners/cli-runner.js --platform flagstone --no-headless",
+    "scrape:hl:visible": "node src/runners/cli-runner.js --platform hl --no-headless",
+    "scrape:ajbell:visible": "node src/runners/cli-runner.js --platform ajbell --no-headless",
+    "scrape:moneyfacts:visible": "node src/runners/cli-runner.js --platform moneyfacts --no-headless",
     "test:ajbell": "node src/runners/cli-runner.js ajbell --test",
     "test:flagstone": "node src/runners/cli-runner.js flagstone --test",
     "test:hl": "node src/runners/cli-runner.js hl --test",
